--- a/.drone.yml
+++ b/.drone.yml
@@ -7,5 +7,7 @@ steps:
   - name: build
     image: golang:1.15
     commands:
-      - prom build
+      - export GO111MODULE=on
+      - go get -u -v github.com/prometheus/promu@v0.12.0
+      - promu build
       - ./drone_enhanced version
