--- a/.promu.yml
+++ b/.promu.yml
@@ -1,4 +1,3 @@
-verbose: false
 go:
   version: 1.15.1
   cgo: false
@@ -11,12 +10,13 @@ build:
   flags: -a -tags netgo
   ldflags: |
     -s
-    -X {{repoPath}}/version.Version={{.Version}}
-    -X {{repoPath}}/version.Revision={{.Revision}}
-    -X {{repoPath}}/version.Branch={{.Branch}}
-    -X {{repoPath}}/version.BuildUser={{user}}@{{host}}
-    -X {{repoPath}}/version.BuildDate={{date "20060102-15:04:05"}}
+    -X github.com/prometheus/common/version.Version={{.Version}}
+    -X github.com/prometheus/common/version.Revision={{.Revision}}
+    -X github.com/prometheus/common/version.Branch={{.Branch}}
+    -X github.com/prometheus/common/version.BuildUser={{user}}@{{host}}
+    -X github.com/prometheus/common/version.BuildDate={{date "20060102-15:04:05"}}
 crossbuild:
   platforms:
     - linux/amd64
     - darwin/amd64
+    - windows/amd64
