--- a/.promu.yml
+++ b/.promu.yml
@@ -9,12 +9,14 @@ build:
       path: cmd
   flags: -a -tags netgo
   ldflags: |
-    -s
     -X github.com/prometheus/common/version.Version={{.Version}}
     -X github.com/prometheus/common/version.Revision={{.Revision}}
     -X github.com/prometheus/common/version.Branch={{.Branch}}
     -X github.com/prometheus/common/version.BuildUser={{user}}@{{host}}
     -X github.com/prometheus/common/version.BuildDate={{date "20060102-15:04:05"}}
+tarball:
+  files:
+    - drone-enhanced
 crossbuild:
   platforms:
     - linux/amd64
