--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,6 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-build
-drone-enhanced
+.build
+drone-enhanced*
 .envrc
