--- a/.drone.yml
+++ b/.drone.yml
@@ -58,3 +58,11 @@ steps:
     environment:
       GITHUB_TOKEN:
         from_secret: GITHUB_TOKEN
+    volumes:
+      - name: docker-socket
+        path: /var/run/docker.sock
+
+volumes:
+  - name: docker-socket
+    host:
+      path: /var/run/docker.sock
