--- a/.drone.yml
+++ b/.drone.yml
@@ -60,6 +60,14 @@ steps:
       - name: docker-bin
         path: /usr/bin/docker
 
+trigger:
+  ref:
+    - refs/heads/release-*
+    - refs/tags/*
+  event:
+    - custom
+    - promote
+
 volumes:
   - name: docker-socket
     host:
