--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,3 +22,27 @@ jobs:
 
       - name: Version
         run: ./drone-enhanced version
+
+  cross-build-check:
+    runs-on: ubuntu-latest
+    name: Go build for different platform
+    env:
+      GOBIN: /tmp/.bin
+    steps:
+      - name: Install Go.
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.15.x
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
+      - uses: actions/cache@v1
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+
+      - name: Cross build check.
+        run: |
+          make promu
+          promu crossbuild
