--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Cross build check.
         run: |
           make promu
-          export PATH="`go env GOPATH`;$PATH"
+          export PATH="`go env GOPATH`/bin;$PATH"
           promu crossbuild
           promu crossbuild tarballs
           promu checksum .tarballs
